Updated rtbbidder module. Its in working condition but without ltm and ipprops

--- a/tomcat/templates/setenv.erb
+++ b/tomcat/templates/setenv.erb
@@ -81,7 +81,7 @@ export CATALINA_BASE="$TOMCAT_DIR"
 export CATALINA_HOME="$TOMCAT_DIR"
 export CATALINA_SCRIPT="/usr/local/tomcat/bin/catalina.sh"
 export BASEDIR="$TOMCAT_DIR"
-export CATALINA_PID="/var/rsi/run/catalina.pid"
+export CATALINA_PID="/var/rsi/run/tomcat/tomcat.pid"
 export CATALINA_CLASSPATH="${TOMCAT_DIR}/bin/setclasspath.sh"
 export CATALINA_TMPDIR="/var/rsi/tomcat/tmp/${APP_NAME}"
 export CATALINA_WORK_DIR="/var/rsi/tomcat/work/${APP_NAME}"
